z-index fix

--- a/src/sass/sass_main.scss
+++ b/src/sass/sass_main.scss
@@ -90,7 +90,7 @@ header {
         width: 100%;
         height: 100%;
         background: -webkit-linear-gradient(top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0) 99%);
-        z-index: 2;
+        z-index: -1;
     }
 
     img#logo {
